fixins layout shifts

--- a/static_src/front/sass/components/_navigation__main.scss
+++ b/static_src/front/sass/components/_navigation__main.scss
@@ -7,6 +7,8 @@
 
   &__wrapper--main{
     margin-left: auto;
+    min-height: 52px;
+    max-width: 54px;
   }
 
   &--main{
@@ -69,6 +71,10 @@
 @include media("xl"){
   .navigation{
     $self: &;
+    &__wrapper--main{
+      min-width: 30vw;
+      min-height: 32px;
+    }
     &--main{
       #{$self}__btn{
         display: none;
